objects/Subscription__c.object
<CustomObject>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SBS-{000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PB_User_ID__c</fullName>
        <label>PB User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_at__c</fullName>
        <label>Updated at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP__c</fullName>
        <label>Billing ZIP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Until__c</fullName>
        <label>Active Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Editors_count__c</fullName>
        <label>Editors count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_PB_ID__c</fullName>
        <label>Project PB ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_amount__c</fullName>
        <label>Monthly amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <label>Cardholder Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <label>Subscription ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_per_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing per User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_VAT_Number__c</fullName>
        <label>Billing VAT Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stripe_Customer_ID__c</fullName>
        <label>Stripe Customer ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company_Name__c</fullName>
        <label>Billing Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_Subscription_ID__c</fullName>
        <label>Stripe Subscription ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Additional_Info__c</fullName>
        <label>Billing Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Failed_Attempts_Count__c</fullName>
        <label>Payment Failed Attempts Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>